--- a/Engine_Source/Engine_Source.vcxitems.filters
+++ b/Engine_Source/Engine_Source.vcxitems.filters
@@ -153,7 +153,6 @@
     <ClCompile Include="$(MSBuildThisFileDirectory)yaCamera.cpp">
       <Filter>GameObject\Component\Camera</Filter>
     </ClCompile>
-    <ClCompile Include="$(MSBuildThisFileDirectory)yaImage.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="$(MSBuildThisFileDirectory)yaEntity.h">
@@ -237,8 +236,9 @@
     <ClInclude Include="$(MSBuildThisFileDirectory)yaCamera.h">
       <Filter>GameObject\Component\Camera</Filter>
     </ClInclude>
-    <ClInclude Include="$(MSBuildThisFileDirectory)yaImage.h" />
-    <ClInclude Include="$(MSBuildThisFileDirectory)yaObject.h" />
+    <ClInclude Include="$(MSBuildThisFileDirectory)yaObject.h">
+      <Filter>GameObject</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="$(MSBuildThisFileDirectory)yaMath.inl">
