솔루션 정리

--- a/Engine_Source/Engine_Source.vcxitems.filters
+++ b/Engine_Source/Engine_Source.vcxitems.filters
@@ -237,8 +237,10 @@
     <ClInclude Include="$(MSBuildThisFileDirectory)yaCamera.h">
       <Filter>GameObject\Component\Camera</Filter>
     </ClInclude>
+    <ClInclude Include="$(MSBuildThisFileDirectory)yaObject.h">
+      <Filter>GameObject</Filter>
+    </ClInclude>
     <ClInclude Include="$(MSBuildThisFileDirectory)yaImage.h" />
-    <ClInclude Include="$(MSBuildThisFileDirectory)yaObject.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="$(MSBuildThisFileDirectory)yaMath.inl">
