--- a/Shader_Source/Shader_Source.vcxitems.filters
+++ b/Shader_Source/Shader_Source.vcxitems.filters
@@ -27,6 +27,12 @@
     <FxCompile Include="$(MSBuildThisFileDirectory)GridPS.hlsl">
       <Filter>PS</Filter>
     </FxCompile>
+    <FxCompile Include="$(MSBuildThisFileDirectory)TileVS.hlsl">
+      <Filter>VS</Filter>
+    </FxCompile>
+    <FxCompile Include="$(MSBuildThisFileDirectory)TilePS.hlsl">
+      <Filter>PS</Filter>
+    </FxCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="$(MSBuildThisFileDirectory)globals.hlsli" />
