--- a/MohEngine/MohEngine.vcxproj
+++ b/MohEngine/MohEngine.vcxproj
@@ -146,6 +146,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="framework.h" />
+    <ClInclude Include="haWorldCursor.h" />
     <ClInclude Include="hoCursor.h" />
     <ClInclude Include="LoadScenes.h" />
     <ClInclude Include="yaBackGround.h" />
@@ -165,6 +166,7 @@
     <ClInclude Include="yaUICamera.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="haWorldCursor.cpp" />
     <ClCompile Include="hoCursor.cpp" />
     <ClCompile Include="MohEngine.cpp" />
     <ClCompile Include="yaBackGround.cpp" />
