--- a/Shader_Source/Shader_Source.vcxitems.filters
+++ b/Shader_Source/Shader_Source.vcxitems.filters
@@ -42,6 +42,9 @@
     <FxCompile Include="$(MSBuildThisFileDirectory)AnimationPS.hlsl">
       <Filter>PS</Filter>
     </FxCompile>
+    <FxCompile Include="$(MSBuildThisFileDirectory)testPS.hlsl">
+      <Filter>PS</Filter>
+    </FxCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="$(MSBuildThisFileDirectory)globals.hlsli" />
