--- a/Engine_Source/Engine_Source.vcxitems.filters
+++ b/Engine_Source/Engine_Source.vcxitems.filters
@@ -200,6 +200,7 @@
       <Filter>Resource\Shader\CS</Filter>
     </ClCompile>
     <ClCompile Include="$(MSBuildThisFileDirectory)yaPaintShader.cpp" />
+    <ClCompile Include="$(MSBuildThisFileDirectory)yaParticleSystem.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="$(MSBuildThisFileDirectory)yaEntity.h">
@@ -315,6 +316,7 @@
       <Filter>Resource\Shader\CS</Filter>
     </ClInclude>
     <ClInclude Include="$(MSBuildThisFileDirectory)yaPaintShader.h" />
+    <ClInclude Include="$(MSBuildThisFileDirectory)yaParticleSystem.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="$(MSBuildThisFileDirectory)yaMath.inl">
