Feat : Geometry Shader
파티클 Geometry Shader를 이용한 출력

--- a/Shader_Source/Shader_Source.vcxitems.filters
+++ b/Shader_Source/Shader_Source.vcxitems.filters
@@ -10,6 +10,9 @@
     <Filter Include="CS">
       <UniqueIdentifier>{4be2f543-f160-4f29-a386-d57ce911cc49}</UniqueIdentifier>
     </Filter>
+    <Filter Include="GS">
+      <UniqueIdentifier>{fc86a927-8ee2-494c-990d-e4b9a6dbd814}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="$(MSBuildThisFileDirectory)TriangleVS.hlsl">
@@ -56,6 +59,9 @@
     </FxCompile>
     <FxCompile Include="$(MSBuildThisFileDirectory)ParticlePS.hlsl">
       <Filter>PS</Filter>
+    </FxCompile>
+    <FxCompile Include="$(MSBuildThisFileDirectory)ParticleGS.hlsl">
+      <Filter>GS</Filter>
     </FxCompile>
   </ItemGroup>
   <ItemGroup>
