--- a/Engine_Source/Engine_Source.vcxitems.filters
+++ b/Engine_Source/Engine_Source.vcxitems.filters
@@ -201,6 +201,7 @@
     </ClCompile>
     <ClCompile Include="$(MSBuildThisFileDirectory)yaPaintShader.cpp" />
     <ClCompile Include="$(MSBuildThisFileDirectory)yaParticleSystem.cpp" />
+    <ClCompile Include="$(MSBuildThisFileDirectory)yaParticleShader.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="$(MSBuildThisFileDirectory)yaEntity.h">
@@ -317,6 +318,7 @@
     </ClInclude>
     <ClInclude Include="$(MSBuildThisFileDirectory)yaPaintShader.h" />
     <ClInclude Include="$(MSBuildThisFileDirectory)yaParticleSystem.h" />
+    <ClInclude Include="$(MSBuildThisFileDirectory)yaParticleShader.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="$(MSBuildThisFileDirectory)yaMath.inl">
